--- a/preview.html
+++ b/preview.html
@@ -93,7 +93,7 @@
             };
 
             const downloadBeatmap = async () => {
-                const url = `https://txy1.sayobot.cn/beatmaps/download/mini/${sid}`;
+                const url = `https://api.nerinyan.moe/d/${sid}`;
                 const statuslines = document.getElementById('statuslines');
                 
                 const container = document.createElement('div');
