--- a/history.html
+++ b/history.html
@@ -3,11 +3,15 @@
     <head>
         <meta charset="utf-8" />
         <title>osu!web</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+        <link rel="stylesheet" href="https://unpkg.com/nprogress@0.2.0/nprogress.css">
         <link rel="stylesheet" href="style/picnic.min.css">
         <link rel="stylesheet" type="text/css" href="style/main.css">
         <link rel="stylesheet" type="text/css" href="style/font.css">
         <link rel="icon" href="favicon.png">
-        <script type="text/javascript" src="scripts/lib/localforage.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+        <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
+        <script src="scripts/lib/localforage.min.js"></script>
     </head>
 
     <body>
@@ -49,6 +53,7 @@
                 </table>
             </div>
         </div>
+
         <script>
             const formatDate = date => {
                 const months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 
